--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       body {
         font-family: "Inconsolata", monospace;
       }
+
+      button {
+        touch-action: manipulation;
+      }
     </style>
   </head>
   <body>
