--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap"
       rel="stylesheet"
     />
+<!--    <link-->
+<!--      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"-->
+<!--      rel="stylesheet"-->
+<!--      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"-->
+<!--      crossorigin="anonymous"-->
+<!--    />-->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      href="vendor/bootstrap-lumen.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
     <style>
-      body {
-        font-family: "Inconsolata", monospace;
-      }
+      /*body {*/
+      /*  font-family: "Inconsolata", monospace;*/
+      /*}*/
 
       button {
         touch-action: manipulation;
